[mojo] Don't CHECK fail when a Mojo channel isn't available for a child process.

This is intended to be a mergable patch for M51.

BUG=604106

Review URL: https://codereview.chromium.org/1894933003

Cr-Commit-Position: refs/heads/master@{#388027}

Former-commit-id: d432f3e89f5d70c432810b9528d196629c4a50b8